--- a/src/http/views/partials/footer.hbs
+++ b/src/http/views/partials/footer.hbs
@@ -1,3 +1,6 @@
-<footer class="w-full mt-8 py-4 bg-teal-50 border-t border-teal-200 text-center text-sm text-teal-800">
-    I Want My MTG! &#9734; mdt
-</footer>
+<div class="w-full mt-auto">
+    <div class="h-1 bg-gradient-to-r from-teal-400 via-purple-500 to-hotpink-500"></div>
+    <footer class="py-6 bg-purple-900 dark:bg-midnight-950 text-center text-sm text-teal-300 dark:text-teal-400">
+        I Want My MTG! &#9734; mdt
+    </footer>
+</div>
