--- a/src/http/views/resetRequestSent.hbs
+++ b/src/http/views/resetRequestSent.hbs
@@ -1,16 +1,16 @@
 <div class='verification-container'>
     <h2 class='page-title'>Check Your Email</h2>
     <div class='section-container'>
-        <p class='text-lg mb-4'>
+        <p class='text-lg mb-4 text-gray-700 dark:text-gray-300'>
             {{ message }}
         </p>
-        <p class='mb-4'>
+        <p class='mb-4 text-gray-600 dark:text-gray-400'>
             Please check your inbox and click the link to reset your password.
         </p>
-        <p class='text-sm text-gray-600'>
+        <p class='text-sm text-gray-500 dark:text-gray-500'>
             The reset link will expire in 1 hour.
         </p>
-        <p class='text-sm text-gray-600 mt-4'>
+        <p class='text-sm text-gray-500 dark:text-gray-500 mt-4'>
             Didn't receive the email? Check your spam folder or
             <a href='/auth/forgot-password' class='text-link'>try again</a>.
         </p>
