--- a/src/http/views/user.hbs
+++ b/src/http/views/user.hbs
@@ -52,9 +52,9 @@
             <button id='update-password-btn' class='btn btn-secondary' type='submit'>Update Password</button>
         </form>
     </div>
-    <div class='section-container'>
-        <h3 class='page-subtitle'>Delete User Account</h3>
-        <button id='delete-user-btn' class='btn btn-tertiary' type='submit'>Delete User</button>
+    <div class='section-container border-l-4 border-hotpink-500 dark:border-hotpink-400'>
+        <h3 class='page-subtitle text-hotpink-600 dark:text-hotpink-400'>Delete User Account</h3>
+        <button id='delete-user-btn' class='btn btn-danger' type='submit'>Delete User</button>
     </div>
 </div>
 <script src='/public/js/form-validation.js'></script>
