--- a/src/http/views/verificationResult.hbs
+++ b/src/http/views/verificationResult.hbs
@@ -1,8 +1,8 @@
 <div class='verification-container'>
     <h2 class='page-title'>Email Verification</h2>
     <div class='section-container'>
-        <div class='bg-error p-4 rounded mb-4'>
-            <p>{{message}}</p>
+        <div class='bg-error p-4 rounded-lg mb-4'>
+            <p class='text-gray-800 dark:text-gray-100'>{{message}}</p>
         </div>
         <a href='/user/create' class='btn btn-primary'>Sign Up Again</a>
     </div>
