--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -3,7 +3,9 @@
     <section class="card-info flex flex-col md:flex-row section-container">
 
         <section class="md:w-1/3 mb-4 md:mb-6">
-            <img class="card-image" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
+            <div class="aspect-w-2 aspect-h-3">
+                <img class="card-image" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
+            </div>
         </section>
 
         <section class="play-info md:w-2/3 md:pl-6">
@@ -16,7 +18,7 @@
                 </div>
                 <div class="flex items-center mb-2">
                     <i class="ss ss-{{card.setCode}} ss-{{toLowerCase card.rarity}} ss-2x mr-2"></i>
-                    <span class="text-lg font-medium">{{toUpperCase card.setCode}} {{card.setName}}</span>
+                    <span class="text-lg font-medium text-gray-700 dark:text-gray-300">{{toUpperCase card.setCode}} {{card.setName}}</span>
                 </div>
             </h3>
 
@@ -24,7 +26,9 @@
                 <section class="subsection-container">
                     <h3 class="section-title">Oracle Text</h3>
                     <p class="card-type section-content">{{card.type}}</p>
-                    <p class="card-oracle-text section-content">{{card.oracleText}}</p>
+                    <div class="prose dark:prose-invert max-w-none">
+                        <p class="card-oracle-text section-content">{{card.oracleText}}</p>
+                    </div>
                 </section>
                 <p class="card-rarity section-content">{{capitalize card.rarity}}</p>
                 <p class="card-number section-content">#{{card.number}}</p>
@@ -36,8 +40,18 @@
                 <table class="list-disc list-inside section-content w-full">
                     {{#each card.legalities as |legality|}}
                     <tr>
-                        <td class="w-1/2">{{capitalize legality.format}}</td>
-                        <td class="w-1/2">{{capitalize legality.status}}</td>
+                        <td class="w-1/2 py-1">{{capitalize legality.format}}</td>
+                        <td class="w-1/2 py-1">
+                            {{#if (eq legality.status 'legal')}}
+                            <span class="inline-block px-2 py-0.5 rounded-full text-xs font-medium bg-teal-100 text-teal-800 dark:bg-teal-900/40 dark:text-teal-300">{{capitalize legality.status}}</span>
+                            {{else if (eq legality.status 'banned')}}
+                            <span class="inline-block px-2 py-0.5 rounded-full text-xs font-medium bg-hotpink-100 text-hotpink-700 dark:bg-hotpink-700/30 dark:text-hotpink-300">{{capitalize legality.status}}</span>
+                            {{else if (eq legality.status 'restricted')}}
+                            <span class="inline-block px-2 py-0.5 rounded-full text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900/40 dark:text-purple-300">{{capitalize legality.status}}</span>
+                            {{else}}
+                            <span class="inline-block px-2 py-0.5 rounded-full text-xs font-medium bg-gray-100 text-gray-600 dark:bg-gray-800 dark:text-gray-400">{{capitalize legality.status}}</span>
+                            {{/if}}
+                        </td>
                     </tr>
                     {{/each}}
                 </table>
