--- a/src/http/views/layouts/main.hbs
+++ b/src/http/views/layouts/main.hbs
@@ -5,24 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css" rel="stylesheet" type="text/css" />
     <link href="/public/css/tailwind.css" rel="stylesheet" type="text/css" />
     <link href="/public/css/app.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" >
+    <script>
+        (function() {
+            var theme = localStorage.getItem('theme');
+            if (theme === 'dark') {
+                document.documentElement.classList.add('dark');
+            }
+        })();
+    </script>
 </head>
 
-<body class="bg-white items-center justify-center min-h-screen">
+<body class="bg-gray-50 dark:bg-midnight-950 font-body text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
     <header>
         {{>navbar}}
         {{>breadcrumbs}}
-        {{!-- TODO: toggle main/base sets +include bonus sets (or add tabs??) --}}
     </header>
-    <main class="text-sm sm:text-base md:text-lg lg:test-xl">
+    <main class="text-sm sm:text-base md:text-lg lg:text-xl flex-1">
         {{{body}}}
     </main>
     <footer>
         {{>footer}}
     </footer>
+    <script src="/public/js/theme-toggle.js" defer></script>
 </body>
 
 </html>
