--- a/src/http/views/partials/pagination.hbs
+++ b/src/http/views/partials/pagination.hbs
@@ -11,13 +11,13 @@
     {{#if pagination.skipBack}}
     <a href="{{pagination.skipBack.href}}"
         class="pagination-btn pagination-btn-tertiary">{{pagination.skipBack.text}}</a>
-    <span>...</span>
+    <span class="text-gray-400 dark:text-gray-500">...</span>
     {{/if}}
 
     <span class="pagination-btn pagination-btn-current" aria-current="page">{{pagination.current}}</span>
 
     {{#if pagination.skipForward}}
-    <span>...</span>
+    <span class="text-gray-400 dark:text-gray-500">...</span>
     <a href="{{pagination.skipForward.href}}"
         class="pagination-btn pagination-btn-tertiary">{{pagination.skipForward.text}}</a>
     {{/if}}
@@ -33,14 +33,15 @@
         {{#if filter}}
         <input type="hidden" name="filter" value="{{filter.term}}">
         {{/if}}
-        <select id="limit" name="limit" class="input-field w-20 text-center py-1 pl-0 pr-2 
-                text-xs sm:text-sm bg-white border border-teal-300 rounded focus:ring-2 
-                focus:ring-teal-200 focus:outline-none" onchange="this.form.submit()">
+        <select id="limit" name="limit" class="input-field w-20 text-center py-1 pl-0 pr-2
+                text-xs sm:text-sm bg-white dark:bg-midnight-800 border border-teal-300 dark:border-teal-600
+                rounded-lg focus:ring-2 focus:ring-teal-400 focus:outline-none
+                text-gray-900 dark:text-gray-100" onchange="this.form.submit()">
             <option value="25" {{#if (eq pagination.limit 25)}}selected{{/if}}>25</option>
             <option value="50" {{#if (eq pagination.limit 50)}}selected{{/if}}>50</option>
             <option value="100" {{#if (eq pagination.limit 100)}}selected{{/if}}>100</option>
         </select>
-        <label for="limit" class="text-sm font-medium text-teal-700">per page</label>
+        <label for="limit" class="text-sm font-medium text-teal-700 dark:text-teal-300">per page</label>
     </form>
 </section>
 {{/if}}
