--- a/src/http/views/partials/priceInfoTooltip.hbs
+++ b/src/http/views/partials/priceInfoTooltip.hbs
@@ -1,5 +1,5 @@
 <button type="button"
-    class="price-info-tooltip-trigger absolute top-2 right-2 text-{{iconColor}}-600 hover:text-{{iconColor}}-800 transition-colors group"
+    class="price-info-tooltip-trigger absolute top-2 right-2 text-{{iconColor}}-600 dark:text-{{iconColor}}-400 hover:text-{{iconColor}}-800 dark:hover:text-{{iconColor}}-300 transition-colors group"
     aria-label="{{title}}" data-tooltip-type="{{type}}" data-base-size="{{baseSize}}" data-total-size="{{totalSize}}">
     <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
         <path fill-rule="evenodd"
@@ -8,8 +8,8 @@
     </svg>
 </button>
 <div
-    class="price-info-tooltip hidden absolute top-8 right-2 bg-gray-900 text-white text-xs rounded p-2 shadow-lg z-10 w-48">
+    class="price-info-tooltip hidden absolute top-8 right-2 bg-midnight-800 dark:bg-midnight-700 text-white text-xs rounded-lg p-2 shadow-lg z-10 w-48">
     <p class="mb-1 font-semibold">{{title}}</p>
     <p class="tooltip-description"></p>
-    <div class="absolute top-0 right-3 -mt-1 w-2 h-2 bg-gray-900 transform rotate-45"></div>
+    <div class="absolute top-0 right-3 -mt-1 w-2 h-2 bg-midnight-800 dark:bg-midnight-700 transform rotate-45"></div>
 </div>
