--- a/src/http/views/partials/tags.hbs
+++ b/src/http/views/partials/tags.hbs
@@ -1,3 +1,3 @@
 {{#each item.tags }}
-<span class="text-xs text-white bg-purple-500 px-1 mx-1">{{this}}</span>
+<span class="tag">{{this}}</span>
 {{/each}}
