--- a/src/http/views/verificationSent.hbs
+++ b/src/http/views/verificationSent.hbs
@@ -1,17 +1,17 @@
 <div class='verification-container'>
     <h2 class='page-title'>Check Your Email</h2>
     <div class='section-container'>
-        <p class='text-lg mb-4'>
+        <p class='text-lg mb-4 text-gray-700 dark:text-gray-300'>
             We've sent a verification email to
-            <strong>{{email}}</strong>.
+            <strong class='text-teal-600 dark:text-teal-400'>{{email}}</strong>.
         </p>
-        <p class='mb-4'>
+        <p class='mb-4 text-gray-600 dark:text-gray-400'>
             Please click the link in the email to verify your account and complete registration.
         </p>
-        <p class='text-sm text-gray-600'>
+        <p class='text-sm text-gray-500 dark:text-gray-500'>
             The verification link will expire in 24 hours.
         </p>
-        <p class='text-sm text-gray-600 mt-4'>
+        <p class='text-sm text-gray-500 dark:text-gray-500 mt-4'>
             Didn't receive the email? Check your spam folder or
             <a href='/user/create' class='text-link'>try signing up again</a>.
         </p>
