--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -1983,6 +1983,10 @@ input:where([type='file']):focus {
   display: flex;
 }
 
+.\!inline-flex {
+  display: inline-flex !important;
+}
+
 .inline-flex {
   display: inline-flex;
 }
