--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -57,7 +57,7 @@
                     </div>
                     {{! Price Grid }}
                     <div class="grid grid-cols-1
-                        {{#if (gt set.prices.gridcols 1)}}
+                        {{#if (gt set.prices.gridCols 1)}}
                         sm:grid-cols-2
                         {{else}}
                         sm:grid-cols-1
